# riftbound.win

./: .gitignore  AGENTS.md  Cargo.toml  README.md  wrangler.playground-table.toml  wrangler.toml
data/: riftbound.sqlite
public/: _worker.js  app.js  auth-state.js  auth.js  brand.js  card-filter-state.js  card-grid-repair.js  cards.json  community-media.js  community.js  deck-utils.js  decks.js  foil.js  index.html  landing.js  paging.js  perf.js  playground-actions.js  playground-lobby.js  playground-realtime.js  playground-state.js  playground-table-selection.js  playground-visibility.js  playground.js  profile.js  styles.css
rules/: deployment.md  packaging.md  project-governance.md
scripts/: check_frontend_perf.py  ensure_cloudflare_pages_dns.py  ensure_cloudflare_pages_domain.py  package_static_site.py  prepare_cloudflare_pages_backend.py
src/: card.rs  image_metadata.rs  lib.rs  local_api.rs  main.rs  storage.rs  syncer.rs
tests/: auth_state.test.mjs  brand.test.mjs  card_decode.rs  card_filter_state.test.mjs  card_grid_repair.test.mjs  check_frontend_perf_test.py  community_media.test.mjs  deck_page_structure.test.mjs  deck_utils.test.mjs  foil_css.test.mjs  foil_layers.test.mjs  html_assets.test.mjs  image_metadata.rs  landing_hero.test.mjs  local_api.rs  package_static_site_test.py  paging.test.mjs  perf_sampler.test.mjs  playground_actions.test.mjs  playground_durable_object.test.mjs  playground_lobby.test.mjs  playground_page_structure.test.mjs  playground_realtime.test.mjs  playground_state.test.mjs  playground_table_selection.test.mjs  (+7 more)
(+13 files in other folders)
